k8s/application/03-deployment.yaml
#@ load("@ytt:data", "data")
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: educates-frontend
  namespace: #@ data.values.namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: educates-frontend
  template:
    metadata:
      labels:
        app: educates-frontend
    spec:
      containers:
        - name: frontend
          image: #@ data.values.image
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: config
              mountPath: /app/config/site.json
              subPath: site.json
              readOnly: true
            - name: data
              mountPath: /app/data
            #@ if hasattr(data.values, "ingress") and hasattr(data.values.ingress, "caSecretRef"):
            - mountPath: /opt/certs/Cluster_Ingress_CA.pem
              name: workshop-ca
              subPath: ca.crt
            #@ end
            - name: config
              mountPath: /app/config/theme.css
              subPath: theme.css
              readOnly: true
            - name: config
              mountPath: /app/config/logo.svg
              subPath: logo.svg
              readOnly: true
            - name: config
              mountPath: /app/config/logo.png
              subPath: logo.png
              readOnly: true
            - name: config
              mountPath: /app/config/logo.jpg
              subPath: logo.jpg
              readOnly: true
            - name: config
              mountPath: /app/config/logo.jpeg
              subPath: logo.jpeg
              readOnly: true
            - name: config
              mountPath: /app/config/logo.webp
              subPath: logo.webp
              readOnly: true
      volumes:
        - name: config
          secret:
            secretName: educates-frontend-config
        - name: data
          emptyDir: {}
        #@ if hasattr(data.values, "ingress") and hasattr(data.values.ingress, "caSecretRef") and data.values.ingress.caSecretRef:
        - name: workshop-ca
          secret:
            defaultMode: 420
            secretName: #@ data.values.ingress.caSecretRef.name
        #@ end
